--- a/client/src/pages/ProposalEditor.css
+++ b/client/src/pages/ProposalEditor.css
@@ -24,6 +24,10 @@
   min-width: 0;
 }
 
+.main-content.full-width {
+  width: 100%;
+}
+
 .content-header {
   background: white;
   border-bottom: 1px solid #e2e8f0;
